hphp/hack/test/typecheck/enum_7.php.exp
File "enum_7.php", line 11, characters 24-28:
Enums must be int or string, not a mixed value (Typing[4024])
